syntax = "proto3";

import "proto/operator.proto";

package gcloud;

service GCloudService {
	rpc ListInstances(ListInstancesRequest) returns (ListInstancesResponse);
}

message Instance {
	string id = 1;
	string name = 2;
	string status = 3;
	string zone = 4;
}

message ListInstancesRequest {
	string project_id = 1;
}

message ListInstancesResponse {
	proto.Output output = 1;
	repeated Instance objects = 2;
}
